bin/pruebaslenguaje/robot.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{
  LOOKAHEAD = 2;  static = false;}PARSER_BEGIN(robot)package pruebaslenguaje;
import java.util.HashMap;
import java.util.LinkedList;
public class robot{

/* mapa para guardar las variables globales durante la ejecucion del programa */
  private HashMap<String, Long > userVals = new HashMap< String, Long>();
/* mapa para guardar las definiciones de las funciones y sus parametros*/
  private HashMap<String,LinkedList<String>> functions = new HashMap<String,LinkedList<String>>();
/* referencia a los parametros de la funcion */
  private LinkedList<String> funparams;
  
  public static void main(String args []) throws ParseException  {    robot parser = new robot(System.in);    while (true)    {      System.out.println("Reading from standard input...");      System.out.print("Enter an robot expression:");      try      {        parser.command();      }      catch (Exception e)      {        System.out.println("NOK.");        System.out.println(e.getMessage());
        e.printStackTrace();        break;
      }      catch (Error e)      {        System.out.println("Oops.");        System.out.println(e.getMessage());
        e.printStackTrace();        break;      }    }  }}PARSER_END(robot)SKIP:
{
		" "
	|	"\r"
	|	"\t"
}

/* Definicion de comandos basicos */
TOKEN: 
{
		   <MOVE :  "MOVE">
		|  <RIGHT: "RIGHT">
		|  <LEFT: "LEFT">
		|  <ROTATE: "ROTATE">
		|  < LOOK: "LOOK" >
		|  < N : "N" >
		|  < E : "E" >
		|  < W : "W" >
		|  < S : "S" >
		|  < DROP : "DROP" >
		|  < FREE : "FREE" >
		|  < PICK : "PICK" >
		|  < POP : "POP" >
		|  < CHECK : "CHECK" >
		|  < C : "C" >
		|  < B : "B" >
		|  < BLOCKEDP : "BLOCKEDP" >
		|  < NOP : "NOP" >
		|  < BLOCK : "BLOCK" >
		|  < REPEAT : "REPEAT" >
		|  < IF : "IF" >
		|  < DEFINE : "DEFINE" >
		|  < TO : "TO" >
		|  < OUTPUT : "OUTPUT" >
		|  < END : "END" >
}

TOKEN :
{
		<NUMERO: (<DIGIT>)+ >
	    | <VARIABLE : (< LETTER >)+>
	    | < PARAM : ":"(< LETTER >)+ >
		| <#DIGIT: ["0"-"9"] >
		| <#LETTER: ["a"-"z"]>
} 


//-----------------------------------------------------------------------------------------------

void command():
	{		
	}
	{
		(
			(			(    
			   <MOVE>   numero()
	    	|  <RIGHT>  numero()
			|  <LEFT>   numero()
			|  <ROTATE> numero()
			|  <DROP>   numero()
			|  <FREE>   numero()
			|  <PICK>   numero()
		    |  <POP>    numero()
		    |  <BLOCKEDP>
		    |  <NOP>
		    |  <LOOK>   ("N"|"E"|"W"|"S")
		    |  <CHECK>  ("C"|"B") numero()
		    |  block()
		    |  repeat()
		    |  conditional()
		    |  define()
		    |  function()
		    |  funcall()
		    |  varcall()
			) ("\n")+)
			|  "\n"
        )+
	}

/**
* reconoce un numero entero sin signo
* @return el valor entero correspondiente al valor reconocido
* VERIFICA SI LA ENTRADA ES UN NUMERO O UNA VARIABLE PREVIAMENTE DEFINIDA POR EL USUARIO.
*/
Long numero() throws Error:
	{	
		Long total;
	}
	{
		(<NUMERO>|<VARIABLE>|<PARAM>)
		{
			// busca si el numero es realmente un parametro de una funcion que se esta definiendo.
			if(funparams != null) {
			  for (String param : funparams) {  
		  	  if(param.compareTo(token.image)==0) {
		  	     return (long) 0;
		  	    }
		  	  }
			}
		  	// Mira si el numero esta definido por medio de una variable global definida por el usuario.
		  	total = userVals.get(token.image);
		  	if(total!=null) {
		  	  return total;
		  	}
		  	//si no es ninguna de las anteriores entonces debe ser un numero explicito.
		  	else {
		  	  	try 
				{
					total = Long.parseLong(token.image);
					return total;
				} 
				catch (Exception e) 
				{
				  throw new Error("Error al intentar convertir: "+token.image +" en un numero.");
				}
			}
		}
	}

void block():
{
}
{
  "("
  	<BLOCK>
   ("\n")*  	  	command()
   ("\n")*
  ")"
}

void repeat():
{
}
{
  <REPEAT>
   numero()
   ("\n")*   
  "["
   ("\n")*
   command()
   ("\n")*
  "]"
}

void conditional():
{
}
{
  <IF>
  ("!")? <BLOCKEDP>
  ("\n")*
  "["
  ("\n")*
  command()
  ("\n")*
  "]"
  
}

void define():
{
  String name="";
  Long value;
}
{
  <DEFINE>
  <VARIABLE>
  {
    name = token.image;
  }
  <NUMERO>
  {
    try {
      value = Long.parseLong(token.image);
    }
    catch(Exception e) {
      throw new ParseException("Una variable solo puede guardar numeros");
    }
    userVals.put(name, value);
  }
  
}

void function():
{
  String name = "";
  LinkedList<String> params = new LinkedList<String>();
}
{
  <TO>
  <VARIABLE>
  {
    name = token.image;
  }
  (
    <PARAM>
    { 
     params.add(token.image);
    }
  )*
  {
    //retorna el viejo valor (si ya habia uno con esa misma key) y null si es la primera vez que se inserta.
    if(functions.put(name,params)!=null) {
      throw new ParseException("La funcion: "+ name +" ya fue previamente definida.");
    }
    funparams = params;
  }
   ("\n")*
  <OUTPUT>
   ("\n")*
  command()
   ("\n")*
  <END>
  {
    funparams = null;
  }
}

void funcall():
{
  int pcount =0;
  String tokenImage = "";
}
{
  <VARIABLE>
  {
    if(functions.get(token.image)==null) {
      throw new ParseException("Bad input. Si es un llamado a funcall(), La funcion que se intenta llamar no ha sido definida.");
    }
    tokenImage = token.image;
  }
  (<NUMERO>
	{
	  pcount ++;
	}
  )*
  {
    if(pcount != functions.get(tokenImage).size()) {
      throw new ParseException("El numero de parametros ingresados no concuerda con el numero de parametros\n"+
      "definidos en la funcion.");
    }
  }
}

void varcall():
{
}
{
  < VARIABLE>
  {
    if(userVals.get(token.image)==null) {
      throw new ParseException("La variable no ha sido definida.");
    }
  }
}

/* el proposito de este metodo es unicamente el de permitir command()] o command())
sin requerir el salto de linea.
*/
void basicCommand():
{
}
{
  	(    
	   <MOVE>   numero()
   	|  <RIGHT>  numero()
	|  <LEFT>   numero()
	|  <ROTATE> numero()
	|  <DROP>   numero()
	|  <FREE>   numero()
	|  <PICK>   numero()
    |  <POP>    numero()
    |  <BLOCKEDP>
    |  <NOP>
    |  <LOOK>   ("N"|"E"|"W"|"S")
    |  <CHECK>  ("C"|"B") numero()
    |  block()
    |  repeat()
    |  conditional()
    |  define()
    |  function()
    |  funcall()
    |  varcall()
	)
}












