source/pruebaslenguaje/robot.java
/* Generated By:JavaCC: Do not edit this line. robot.java */
package pruebaslenguaje;
import java.util.HashMap;
import java.util.LinkedList;
public class robot implements robotConstants {

/* mapa para guardar las variables globales durante la ejecucion del programa */
  private HashMap<String, Long > userVals = new HashMap< String, Long>();
/* mapa para guardar las definiciones de las funciones y sus parametros*/
  private HashMap<String,LinkedList<String>> functions = new HashMap<String,LinkedList<String>>();
/* referencia a los parametros de la funcion */
  private LinkedList<String> funparams;

  public static void main(String args []) throws ParseException
  {
    robot parser = new robot(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an robot expression:");
      try
      {
        parser.command();
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        e.printStackTrace();
        break;
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        e.printStackTrace();
        break;
      }
    }
  }

//-----------------------------------------------------------------------------------------------
  final public void command() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_27(4)) {
        if (jj_2_7(4)) {
          jj_consume_token(MOVE);
          numero();
        } else if (jj_2_8(4)) {
          jj_consume_token(RIGHT);
          numero();
        } else if (jj_2_9(4)) {
          jj_consume_token(LEFT);
          numero();
        } else if (jj_2_10(4)) {
          jj_consume_token(ROTATE);
          numero();
        } else if (jj_2_11(4)) {
          jj_consume_token(DROP);
          numero();
        } else if (jj_2_12(4)) {
          jj_consume_token(FREE);
          numero();
        } else if (jj_2_13(4)) {
          jj_consume_token(PICK);
          numero();
        } else if (jj_2_14(4)) {
          jj_consume_token(POP);
          numero();
        } else if (jj_2_15(4)) {
          jj_consume_token(BLOCKEDP);
        } else if (jj_2_16(4)) {
          jj_consume_token(NOP);
        } else if (jj_2_17(4)) {
          jj_consume_token(LOOK);
          if (jj_2_1(4)) {
            jj_consume_token(N);
          } else if (jj_2_2(4)) {
            jj_consume_token(E);
          } else if (jj_2_3(4)) {
            jj_consume_token(W);
          } else if (jj_2_4(4)) {
            jj_consume_token(S);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_18(4)) {
          jj_consume_token(CHECK);
          if (jj_2_5(4)) {
            jj_consume_token(C);
          } else if (jj_2_6(4)) {
            jj_consume_token(B);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          numero();
        } else if (jj_2_19(4)) {
          block();
        } else if (jj_2_20(4)) {
          repeat();
        } else if (jj_2_21(4)) {
          conditional();
        } else if (jj_2_22(4)) {
          define();
        } else if (jj_2_23(4)) {
          function();
        } else if (jj_2_24(4)) {
          funcall();
        } else if (jj_2_25(4)) {
          varcall();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_2:
        while (true) {
          jj_consume_token(34);
          if (jj_2_26(4)) {
            ;
          } else {
            break label_2;
          }
        }
      } else if (jj_2_28(4)) {
        jj_consume_token(34);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_29(4)) {
        ;
      } else {
        break label_1;
      }
    }
  }

/**
* reconoce un numero entero sin signo
* @return el valor entero correspondiente al valor reconocido
* VERIFICA SI LA ENTRADA ES UN NUMERO O UNA VARIABLE PREVIAMENTE DEFINIDA POR EL USUARIO.
*/
  final public Long numero() throws ParseException, Error {
                Long total;
    if (jj_2_30(4)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_31(4)) {
      jj_consume_token(VARIABLE);
    } else if (jj_2_32(4)) {
      jj_consume_token(PARAM);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                        // busca si el numero es realmente un parametro de una funcion que se esta definiendo.
                        if(funparams != null) {
                          for (String param : funparams) {
                          if(param.compareTo(token.image)==0) {
                             {if (true) return (long) 0;}
                            }
                          }
                        }
                        // Mira si el numero esta definido por medio de una variable global definida por el usuario.
                        total = userVals.get(token.image);
                        if(total!=null) {
                          {if (true) return total;}
                        }
                        //si no es ninguna de las anteriores entonces debe ser un numero explicito.
                        else {
                                try
                                {
                                        total = Long.parseLong(token.image);
                                        {if (true) return total;}
                                }
                                catch (Exception e)
                                {
                                  {if (true) throw new Error("Error al intentar convertir: "+token.image +" en un numero.");}
                                }
                        }
    throw new Error("Missing return statement in function");
  }

  final public void block() throws ParseException {
    jj_consume_token(35);
    jj_consume_token(BLOCK);
    label_3:
    while (true) {
      if (jj_2_33(4)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(34);
    }
    if (jj_2_34(4)) {
      command();
    } else {
      ;
    }
    basicCommand();
    jj_consume_token(36);
  }

  final public void repeat() throws ParseException {
    jj_consume_token(REPEAT);
    numero();
    label_4:
    while (true) {
      if (jj_2_35(4)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(34);
    }
    jj_consume_token(37);
    label_5:
    while (true) {
      if (jj_2_36(4)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(34);
    }
    if (jj_2_37(4)) {
      command();
    } else {
      ;
    }
    basicCommand();
    jj_consume_token(38);
  }

  final public void conditional() throws ParseException {
    jj_consume_token(IF);
    if (jj_2_38(4)) {
      jj_consume_token(39);
    } else {
      ;
    }
    jj_consume_token(BLOCKEDP);
    label_6:
    while (true) {
      if (jj_2_39(4)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(34);
    }
    jj_consume_token(37);
    label_7:
    while (true) {
      if (jj_2_40(4)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(34);
    }
    if (jj_2_41(4)) {
      command();
    } else {
      ;
    }
    basicCommand();
    jj_consume_token(38);
  }

  final public void define() throws ParseException {
  String name="";
  Long value;
    jj_consume_token(DEFINE);
    jj_consume_token(VARIABLE);
    name = token.image;
    jj_consume_token(NUMERO);
    try {
      value = Long.parseLong(token.image);
    }
    catch(Exception e) {
      {if (true) throw new ParseException("Una variable solo puede guardar numeros");}
    }
    userVals.put(name, value);
  }

  final public void function() throws ParseException {
  String name = "";
  LinkedList<String> params = new LinkedList<String>();
    jj_consume_token(TO);
    jj_consume_token(VARIABLE);
    name = token.image;
    label_8:
    while (true) {
      if (jj_2_42(4)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(PARAM);
     params.add(token.image);
    }
    //retorna el viejo valor (si ya habia uno con esa misma key) y null si es la primera vez que se inserta.
    if(functions.put(name,params)!=null) {
      {if (true) throw new ParseException("La funcion: "+ name +" ya fue previamente definida.");}
    }
    funparams = params;
    label_9:
    while (true) {
      if (jj_2_43(4)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(34);
    }
    jj_consume_token(OUTPUT);
    label_10:
    while (true) {
      if (jj_2_44(4)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(34);
    }
    command();
    label_11:
    while (true) {
      if (jj_2_45(4)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(34);
    }
    jj_consume_token(END);
    funparams = null;
  }

  final public void funcall() throws ParseException {
  int pcount =0;
  String tokenImage = "";
    jj_consume_token(VARIABLE);
    if(functions.get(token.image)==null) {
      {if (true) throw new ParseException("Bad input. Si es un llamado a funcall(), La funcion que se intenta llamar no ha sido definida.");}
    }
    tokenImage = token.image;
    label_12:
    while (true) {
      if (jj_2_46(4)) {
        ;
      } else {
        break label_12;
      }
      jj_consume_token(NUMERO);
          pcount ++;
    }
    if(pcount != functions.get(tokenImage).size()) {
      {if (true) throw new ParseException("El numero de parametros ingresados no concuerda con el numero de parametros\u005cn"+
      "definidos en la funcion.");}
    }
  }

  final public void varcall() throws ParseException {
    jj_consume_token(VARIABLE);
    if(userVals.get(token.image)==null) {
      {if (true) throw new ParseException("La variable no ha sido definida.");}
    }
  }

/* el proposito de este metodo es unicamente el de permitir command()] o command())
sin requerir el salto de linea.
*/
  final public void basicCommand() throws ParseException {
    if (jj_2_73(4)) {
      if (jj_2_53(4)) {
        jj_consume_token(MOVE);
        numero();
      } else if (jj_2_54(4)) {
        jj_consume_token(RIGHT);
        numero();
      } else if (jj_2_55(4)) {
        jj_consume_token(LEFT);
        numero();
      } else if (jj_2_56(4)) {
        jj_consume_token(ROTATE);
        numero();
      } else if (jj_2_57(4)) {
        jj_consume_token(DROP);
        numero();
      } else if (jj_2_58(4)) {
        jj_consume_token(FREE);
        numero();
      } else if (jj_2_59(4)) {
        jj_consume_token(PICK);
        numero();
      } else if (jj_2_60(4)) {
        jj_consume_token(POP);
        numero();
      } else if (jj_2_61(4)) {
        jj_consume_token(BLOCKEDP);
      } else if (jj_2_62(4)) {
        jj_consume_token(NOP);
      } else if (jj_2_63(4)) {
        jj_consume_token(LOOK);
        if (jj_2_47(4)) {
          jj_consume_token(N);
        } else if (jj_2_48(4)) {
          jj_consume_token(E);
        } else if (jj_2_49(4)) {
          jj_consume_token(W);
        } else if (jj_2_50(4)) {
          jj_consume_token(S);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_64(4)) {
        jj_consume_token(CHECK);
        if (jj_2_51(4)) {
          jj_consume_token(C);
        } else if (jj_2_52(4)) {
          jj_consume_token(B);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        numero();
      } else if (jj_2_65(4)) {
        block();
      } else if (jj_2_66(4)) {
        repeat();
      } else if (jj_2_67(4)) {
        conditional();
      } else if (jj_2_68(4)) {
        define();
      } else if (jj_2_69(4)) {
        function();
      } else if (jj_2_70(4)) {
        funcall();
      } else if (jj_2_71(4)) {
        varcall();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      label_13:
      while (true) {
        if (jj_2_72(4)) {
          ;
        } else {
          break label_13;
        }
        jj_consume_token(34);
      }
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  private boolean jj_2_53(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_53(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(52, xla); }
  }

  private boolean jj_2_54(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_54(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(53, xla); }
  }

  private boolean jj_2_55(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_55(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(54, xla); }
  }

  private boolean jj_2_56(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_56(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(55, xla); }
  }

  private boolean jj_2_57(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_57(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(56, xla); }
  }

  private boolean jj_2_58(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_58(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(57, xla); }
  }

  private boolean jj_2_59(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_59(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(58, xla); }
  }

  private boolean jj_2_60(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_60(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(59, xla); }
  }

  private boolean jj_2_61(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_61(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(60, xla); }
  }

  private boolean jj_2_62(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_62(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(61, xla); }
  }
